objects/LLC_BI__Covenant_Type__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Category__c</fullName>
        <description>This field is required and is manually populated. It identifies the category of the associated covenant record (such as Financial Requirements or Insurance Requirements). Finanical Statement Requirement and Financial Indicator covenants can be automatically tested using Spreads.</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Financial Statement Requirements</fullName>
                </value>
                <value>
                    <fullName>Financial Indicators</fullName>
                </value>
                <value>
                    <fullName>Default Covenant</fullName>
                </value>
                <value>
                    <fullName>Term Covenants</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Financial_Indicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users manually select this optional checkbox field. This field is used to define Covenant Types as Financial Indicators. When users select this field, it allows for Financial Indicators to have a custom category. By default, this field is not selected.</description>
        <label>Financial Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Covenant Type</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <columns>NAME</columns>
        <columns>LLC_BI__Category__c</columns>
        <columns>LLC_BI__Is_Financial_Indicator__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Covenant Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Covenant Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>